log/build_2025-11-24_19-33-57/ros2_aruco/stderr.log
  File "/home/hieu/Documents/106AProject_Drone/install/ros2_aruco/lib/python3.10/site-packages/ros2_aruco/aruco_tf.py", line 358
    rclpy.spin(node)testing
                    ^^^^^^^
SyntaxError: invalid syntax

